# Grub_Manager

./: .coverage  .gitignore  ANALYSE_PROFESSIONNELLE.md  AUDIT_ARCHITECTURE_EXPERT_AAA.md  Makefile  README.md  TODO.md  clean_project.sh  cov.json  coverage.json  main.py  prioritize_coverage.py  pyproject.toml  quality.sh  requirements.txt  run_quality.sh
core/: __init__.py  apply_manager.py  core_exceptions.py  entry_visibility.py  grub.py  grub_default.py  grub_menu.py  model.py  paths.py  runtime.py
core/config/: core_config_logging.py  core_config_runtime.py  core_lazy_loading.py  core_logging_config.py  core_paths.py
core/io/: __init__.py  core_grub_default_io.py  core_grub_menu_parser.py  core_io_grub_default.py  core_io_grub_menu_parser.py  core_io_grub_parsing_utils.py  core_io_grub_validation.py  grub_parsing_utils.py  grub_validation.py
core/managers/: __init__.py  apply_states.py  core_apply_manager.py  core_entry_visibility_manager.py  core_managers_apply.py  core_managers_apply_states.py  core_managers_entry_visibility.py  core_managers_protocol.py  protocols.py
core/models/: core_grub_ui_model.py  core_models_grub_ui.py  core_models_theme.py  core_theme_models.py
core/services/: __init__.py  core_grub_script_service.py  core_grub_service.py  core_maintenance_service.py  core_services_grub.py  core_services_grub_script.py  core_services_maintenance.py  core_services_qemu_preview.py  core_services_theme.py  core_theme_generator_enhanced.py  core_theme_service.py
core/system/: __init__.py  core_grub_system_commands.py  core_sync_checker.py  core_system_grub_commands.py  core_system_sync_checker.py
core/theme/: __init__.py  core_active_theme_manager.py  core_theme_active_manager.py  core_theme_generator.py
core/theme/generator/: __init__.py  core_theme_generator_enums.py  core_theme_generator_palettes.py  core_theme_generator_resolution.py
core/theme/theme_generator/: __init__.py  core_theme_generator.py  core_theme_generator_models.py  core_theme_generator_templates.py  core_theme_generator_validation.py
docs/: DEV.md  USER.md
grub_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_main.py  test_main_coverage.py
tests/core/: test_apply_manager.py  test_apply_workflow.py  test_colors.py  test_core_coverage_gaps.py  test_core_exceptions.py  test_core_exceptions_coverage.py  test_entry_visibility.py  test_grub.py  test_grub_default.py  test_grub_menu.py  test_grub_menu_edgecases.py  test_model.py  test_model_100_coverage.py  test_model_coverage.py  test_model_grub_cfg_source_sync.py  test_model_persistence.py  test_paths.py  test_runtime.py  test_sync_checker.py
tests/core/config/: test_core_lazy_loading.py  test_core_logging_config.py  test_core_paths.py  test_core_runtime.py
tests/core/io/: test_core_grub_default_io.py  test_core_grub_default_io_coverage.py  test_core_grub_default_io_filters.py  test_core_grub_menu_parser.py  test_grub_parsing_utils.py  test_grub_validation.py
tests/core/managers/: test_apply_states.py  test_apply_states_coverage.py  test_core_apply_manager.py  test_core_entry_visibility_manager.py
tests/ui/: test_gtk_availability.py  test_permission_controller.py  test_ui_basic.py  test_ui_builder.py  test_ui_constants.py  test_ui_constants_coverage.py  test_ui_controllers.py  test_ui_dialogs.py  test_ui_dialogs_coverage.py  test_ui_exceptions.py  test_ui_exceptions_coverage.py  test_ui_gtk_helpers.py  test_ui_gtk_helpers_coverage.py  test_ui_infobar_controller.py  test_ui_interactive_theme_generator.py  test_ui_interactive_theme_generator_window.py  test_ui_manager.py  test_ui_manager_100_percent_v2.py  test_ui_manager_coverage.py  test_ui_manager_final_coverage.py  test_ui_manager_full.py  test_ui_manager_full_coverage.py  test_ui_manager_refresh.py  test_ui_model_mapper.py  test_ui_protocols.py  test_ui_state.py  test_ui_state_coverage.py  test_ui_tab_display_visibility.py  test_ui_tab_policy.py  test_ui_widgets.py  test_ui_widgets_coverage.py  test_ui_workflow_controller.py
themes/rasta_theme/: theme.txt
ui/: __init__.py  app.py  style.css  ui_builder.py  ui_constants.py  ui_dialogs.py  ui_exceptions.py  ui_file_dialogs.py  ui_gtk_helpers.py  ui_gtk_imports.py  ui_infobar_controller.py  ui_manager.py  ui_model_mapper.py  ui_protocols.py  ui_state.py  ui_tab_policy.py  ui_widgets.py  ui_workflow_controller.py
ui/builders/: __init__.py  ui_builders_index.py  ui_builders_widgets.py
ui/components/: __init__.py  ui_color_picker.py  ui_components_theme.py  ui_components_theme_config_actions.py  ui_components_theme_scripts_list.py  ui_components_theme_scripts_renderer.py  ui_components_theme_simple_config.py  ui_theme_config_actions.py  ui_theme_scripts_list.py  ui_theme_scripts_renderer.py  ui_theme_simple_config.py  ui_theme_simple_config_logic.py
ui/config/: __init__.py  style.css  ui_config_constants.py
ui/controllers/: __init__.py  default_choice_controller.py  permission_controller.py  timeout_controller.py  ui_controllers_infobar.py  ui_controllers_manager.py  ui_controllers_permission.py  ui_controllers_tab_policy.py  ui_controllers_workflow.py
ui/dialogs/: ui_dialogs_file.py  ui_dialogs_grub_preview.py  ui_dialogs_index.py  ui_dialogs_interactive_theme_generator.py  ui_dialogs_interactive_theme_generator_window.py  ui_dialogs_theme_preview.py  ui_interactive_theme_generator.py  ui_interactive_theme_generator_window.py
ui/helpers/: __init__.py  ui_helpers_gtk.py  ui_helpers_gtk_imports.py  ui_helpers_model_mapper.py
ui/models/: __init__.py  ui_models_protocols.py  ui_models_state.py
ui/tabs/: __init__.py  backups.py  base.py  display.py  entries.py  entries_view.py  general.py  ui_entries_renderer.py  ui_grub_preview_dialog.py  ui_tab_backups.py  ui_tab_display.py  ui_tab_entries.py  ui_tab_general.py  ui_tab_maintenance.py  ui_tab_theme_config.py  ui_tab_theme_editor.py  ui_tabs_backups.py  ui_tabs_display.py  ui_tabs_entries.py  ui_tabs_entries_renderer.py  ui_tabs_general.py  ui_tabs_maintenance.py  ui_tabs_theme_config.py  ui_theme_editor_dialog.py  widgets.py
(+58 files in other folders)
