[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grub-manager"
version = "1.0.0"
description = "Gestionnaire de configuration GRUB sécurisé et fiable pour Linux"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Manu", email = "contact@example.com"}
]
keywords = ["grub", "bootloader", "linux", "configuration", "gtk4"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 :: GTK",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Boot",
    "Topic :: System :: Shells",
]

dependencies = [
    "PyGObject>=3.46.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/grub_manager"
Repository = "https://github.com/yourusername/grub_manager.git"
Documentation = "https://github.com/yourusername/grub_manager#readme"
Issues = "https://github.com/yourusername/grub_manager/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "vulture>=2.7.0",
    "memory-profiler>=0.61.0",
    "pytest-timeout>=2.2.0",
    "radon>=6.0.0",
]

[tool.setuptools]
packages = ["core", "ui"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "ui"]

[tool.ruff.lint.per-file-ignores]
"ui/ui_infobar_controller.py" = ["E402"]
"ui/ui_manager.py" = ["E402"]
"ui/ui_workflow_controller.py" = ["E402"]
"tests/ui/*.py" = ["E402"]
"tests/**/*.py" = ["N806", "N815", "N816"]  # Test naming conventions
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
timeout = 10
timeout_method = "signal"
faulthandler_timeout = 20
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=core",
    "--cov=ui",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[[tool.mypy.overrides]]
module = ["gi", "gi.repository"]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = ["ui.*"]
ignore_errors = true

[tool.coverage.run]
branch = true
source = ["core", "ui"]
omit = [
    "*/__init__.py",
    "*/test_*.py",
    "tests/**",
    "*/tests/**",
    "tests/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]

[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"

[tool.pylint.messages_control]
disable = []

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]

[tool.pydocstyle]
convention = "pep257"
match = '(?!test_).*\.py'
add-ignore = ["D401"]

[tool.vulture]
paths = ["core", "ui", "main.py"]
min_confidence = 65
